tests/ucc/type/good/array-vs-ptr.c
int main(void)
{
    int *a;
    int b[5];

    a = b;

    return 0;
}
