tests/ucc/type/bad/ptr-op-vs-float.c
int main(void)
{
    int *b;
    float a = 1;

    b = b + a;
    b = b - a;

    return 0;
}
